fixed illustration alignment

--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ body {
 }
 
 .container {
-  max-width: 20%;
+  max-width: 310px;
 }
 
 .component {
@@ -27,16 +27,20 @@ body {
 }
 
 .comp-img {
-  width: 260px;
-  height: 150px;
-  padding-left: 1rem;
-  padding-top: 1rem;
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  /* padding: 1rem; */
 }
 .about {
   display: flex;
   flex-direction: column;
   gap: 10px;
   padding: 1rem 0 1rem 1rem;
+}
+.section-a {
+  padding: 1rem 1rem 0 1rem;
 }
 .section-b {
   font-size: 11px;
@@ -81,6 +85,7 @@ body {
 .attribution {
   font-size: 11px;
   text-align: center;
+  font-family: "Figtree", sans-serif;
 }
 .attribution a {
   color: hsl(228, 45%, 44%);
